--- a/debian/control
+++ b/debian/control
@@ -6,9 +6,11 @@ Build-Depends: debhelper (>= 9)
   , python3 (>= 3.2)
   , po4a
   , intltool
+  , transifex-client
+  , translate-toolkit
 X-Python3-Version: >= 3.2
 Standards-Version: 3.9.6
-Vcs-Git: git://github.com/linuxmint/live-installer-3
+Vcs-Git: git@github.com:SolydXK/live-installer-3.git
 Vcs-Browser: https://github.com/SolydXK/live-installer-3
 
 Package: live-installer-3
