--- a/usr/share/applications/live-installer-3.desktop
+++ b/usr/share/applications/live-installer-3.desktop
@@ -6,6 +6,7 @@ Name[es]=Instalar
 Name[fr]=Installation 
 Name[it]=Installa
 Name[ja]=インストール
+Name[nb]=Installer
 Name[nl]=Installeren
 Name[pl]=Instaluj
 Name[pt]=Instalar
@@ -17,6 +18,7 @@ GenericName[es]=Instalador Live
 GenericName[fr]=Programme d'installation
 GenericName[it]=Live installer
 GenericName[ja]=ライブインストーラ
+GenericName[nb]=Live Installer
 GenericName[nl]=Installatieprogramma
 GenericName[pl]=Instalator live
 GenericName[pt]=Instalador em Live
@@ -28,6 +30,7 @@ Comment[es]=Instalar el sistema operativo
 Comment[fr]=Installation du système d'exploitation
 Comment[it]=Installa il Sistema Operativo
 Comment[ja]=オペレーティングシステムのインストール
+Comment[nb]=Installer operativsystemet
 Comment[nl]=Installeer het besturingssysteem
 Comment[pl]=Instaluj system operacyjny
 Comment[pt]=Instalar o sistema operativo
