OEM Setup debugging

--- a/usr/share/applications/live-installer-3.desktop
+++ b/usr/share/applications/live-installer-3.desktop
@@ -13,6 +13,8 @@ Name[nl]=Installeren
 Name[pl]=Instaluj
 Name[pt]=Instalar
 Name[ru]=Установить
+Name[sv]=Installera
+Name[tr]=Kur
 GenericName=Live Installer
 GenericName[ca]=Instal·lador autònom 
 GenericName[de]=Live Installer
@@ -27,6 +29,8 @@ GenericName[nl]=Installatieprogramma
 GenericName[pl]=Instalator live
 GenericName[pt]=Instalador em Live
 GenericName[ru]=Установщик
+GenericName[sv]=Direktinstallerare
+GenericName[tr]=Çalışan kurucu
 Comment=Install the operating system
 Comment[ca]=Instal·la el Sistema Operatiu 
 Comment[de]=Installiere das Betriebssystem
@@ -40,6 +44,8 @@ Comment[nb]=Installer operativsystemet
 Comment[nl]=Installeer het besturingssysteem
 Comment[pl]=Instaluj system operacyjny
 Comment[pt]=Instalar o sistema operativo
+Comment[sv]=Installera operativsystemet
+Comment[tr]=İşletim sistemini kur
 Exec=live-installer-3
 Icon=/usr/share/live-installer-3/logo.png
 Terminal=False
